# ndef-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
ndef/: Cargo.toml  README.md
ndef/src/: consts.rs  error.rs  lib.rs  message.rs  payload.rs  record.rs  tag.rs
