[package]
name = "ndef-rs"
version = "0.1.0"
authors = ["Tang Cheng"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bitflags = { version = "2.6", features = ["serde"] }
byteorder = "1.5.0"
iso7816-tlv = "0.4"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
