[package]
name = "ndef-rs"
version = "0.1.0"
authors = ["Tang Cheng"]
license = "MIT"
edition = "2021"
description = "NDEF (NFC Data Exchange Format) parser and generator in Rust"

[dependencies]
anyhow = "1.0.89"
bitflags = { version = "2.6", features = ["serde"] }
byteorder = "1.5.0"
strum = { version = "0.26", features = ["derive"] }
mime = { version = "0.3", optional = true }
thiserror = "1.0.64"

[dev-dependencies]
hex = "0.4.3"


[features]
default = []
mime-payload = ["mime"]
